[tool.poetry]
name = "cfwafenabler"
version = "0.0.1"
description = "Allows to mass modify rules in CloudFlare WAF"
authors = ["David Lladro <david.lladro@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/nomex/cfwafenabler"
repository = "https://github.com/nomex/cfwafenabler"
exclude = ["tests"]
include = ["LICENSE"]
license = ""
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

packages = [
    { include = "cfwafenabler"}
]

[tool.poetry.scripts]
cfwafenabler = 'cfwafenabler.__main__:main'

[tool.poetry.dependencies]
python = "^3.8.0"
cloudflare = "^2.8.15"
configparser = "^5.0.1"
requests = "^2.25.1"
simple-term-menu = "^0.10.5"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
